--- a/build.gradle
+++ b/build.gradle
@@ -41,4 +41,8 @@ dependencies {
     testCompile 'org.assertj:assertj-core:3.10.0'
     testCompile 'org.mockito:mockito-junit-jupiter:2.17.0'
     testImplementation 'com.approvaltests:approvaltests:4.0.2'
+    annotationProcessor 'org.projectlombok:lombok:1.18.10'
+    compileOnly 'org.projectlombok:lombok:1.18.10'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.10'
+    testCompileOnly 'org.projectlombok:lombok:1.18.10'
 }
